@@ -1,0 +1,7 @@
+#ifndef __SDC51_STDNORETURN_H
+#define __SDC51_STDNORETURN_H 1
+
+#define noreturn _Noreturn
+
+#endif
+
